// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordRequirement component should render with resetPassword props 1`] = `
<Fragment>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-top-SM margin-bottom-SM"
    text="Requirement Heading"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs10"
    key="lbl_resetPassword_requirementTips_1"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line1 "
    textAlign="center"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs10"
    key="lbl_resetPassword_requirementTips_2"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line 2"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs10"
    key="lbl_resetPassword_requirementTips_3"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line 3"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs10"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-top-SM"
    style={
      Object {
        "width": "100%",
      }
    }
    text="note:"
    textAlign="center"
    textDecoration={null}
  />
</Fragment>
`;

exports[`PasswordRequirement component should renders correctly 1`] = `
<Fragment>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-top-SM margin-bottom-SM"
    text="Requirement Heading"
    textAlign="left"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs14"
    key="lbl_resetPassword_requirementTips_1"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line1 "
    textAlign="start"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs14"
    key="lbl_resetPassword_requirementTips_2"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line 2"
    textAlign="start"
    textDecoration={null}
  />
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontSize="fs14"
    key="lbl_resetPassword_requirementTips_3"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "width": "100%",
      }
    }
    text="-requirement tip line 3"
    textAlign="start"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs14"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-top-SM"
    style={
      Object {
        "width": "100%",
      }
    }
    text="note:"
    textAlign="start"
    textDecoration={null}
  />
</Fragment>
`;
